--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,21 +1,19 @@
-name: Publish
+name: Build LavaSrc
+
 on:
   push:
-    branches: [ '**' ]
+    branches: [ "**" ]
     paths-ignore:
-      - '**.md'
-      - 'docker/**'
-      - '.github/workflows/docker.yml'
-  release:
-    types: [ published ]
+      - "**.md"
+      - "docker/**"
+      - ".github/workflows/docker.yml"
+  pull_request:
+  workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
-      MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
-      LAVALINK_MAVEN_USERNAME: ${{ secrets.LAVALINK_MAVEN_USERNAME }}
-      LAVALINK_MAVEN_PASSWORD: ${{ secrets.LAVALINK_MAVEN_PASSWORD }}
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -32,8 +30,8 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
 
-      - name: Build and Publish
-        run: ./gradlew build publish --no-daemon -PMAVEN_USERNAME=$MAVEN_USERNAME -PMAVEN_PASSWORD=$MAVEN_PASSWORD -PLAVALINK_MAVEN_USERNAME=$LAVALINK_MAVEN_USERNAME -PLAVALINK_MAVEN_PASSWORD=$LAVALINK_MAVEN_PASSWORD
+      - name: Build
+        run: ./gradlew clean build --no-daemon
 
       - name: Upload main Artifact
         uses: actions/upload-artifact@v4
@@ -46,31 +44,3 @@ jobs:
         with:
           name: LavaSrc-Plugin.jar
           path: plugin/build/libs/lavasrc-plugin-*.jar
-
-  release:
-    needs: build
-    runs-on: ubuntu-latest
-    if: github.event_name == 'release'
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Download main Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: LavaSrc.jar
-
-      - name: Download plugin Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: LavaSrc-Plugin.jar
-
-      - name: Upload Artifacts to GitHub Release
-        uses: ncipollo/release-action@v1
-        with:
-          artifacts: lavasrc-*.jar
-          allowUpdates: true
-          omitBodyDuringUpdate: true
-          omitDraftDuringUpdate: true
-          omitNameDuringUpdate: true
-          omitPrereleaseDuringUpdate: true
